# maliput_ros-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  setup.sh.in  tracks.yaml
.github/workflows/: build.yml
debian/: changelog  control  copyright  gbp.conf  rules
include/maliput_ros/ros/: maliput_query_node.h
maliput_ros/: CHANGELOG.rst  package.xml
maliput_ros/include/maliput_ros/ros/: maliput_query.h
maliput_ros/launch/: maliput_ros.launch.py
maliput_ros/resources/: maliput_malidrive_plugin.yml
maliput_ros/src/: CMakeLists.txt
maliput_ros/src/maliput_ros/ros/: CMakeLists.txt  maliput_query_node.cc  maliput_query_server.cc
maliput_ros/src/maliput_ros/utils/: CMakeLists.txt
maliput_ros/test/maliput_ros/: CMakeLists.txt
maliput_ros/test/maliput_ros/ros/: CMakeLists.txt  branch_point_service_test.cc  lane_geometry_services_test.cc  maliput_query_node_test.cc  maliput_query_node_test_utils.h  maliput_query_test.cc  maliput_ros_road_network_plugin.cc  road_geometry_service_test.cc  road_position_service_test.cc
maliput_ros/test/maliput_ros/utils/: CMakeLists.txt  yaml_parser_test.cc
maliput_ros_interfaces/: CMakeLists.txt
maliput_ros_interfaces/msg/: BranchPoint.msg  HBounds.msg  IsoLaneVelocity.msg  LaneEnd.msg  LaneEndSet.msg  LaneId.msg  LanePosition.msg  RoadGeometryId.msg  RoadPosition.msg  RoadPositionResult.msg  Rotation.msg  SegmentId.msg
maliput_ros_interfaces/srv/: EvalMotionDerivatives.srv  FindRoadPositions.srv  Lane.srv  RoadGeometry.srv  SampleLaneSRoute.srv  ToInertialPose.srv
maliput_ros_translation/: CHANGELOG.rst  README.md  package.xml
maliput_ros_translation/doc/: Doxyfile.overlay
maliput_ros_translation/include/maliput_ros_translation/: convert.h
maliput_ros_translation/src/: CMakeLists.txt
maliput_ros_translation/src/maliput_ros_translation/: convert.cc
maliput_ros_translation/test/maliput_ros_translation/: CMakeLists.txt  convert_test.cc
msg/: BranchPointId.msg  Junction.msg  JunctionId.msg  Lane.msg  LaneSRange.msg  LaneSRoute.msg  RBounds.msg  RoadGeometry.msg  SRange.msg  Segment.msg
src/maliput_ros/utils/: yaml_parser.cc  yaml_parser.h
src/maliput_ros_translation/: CMakeLists.txt
srv/: BranchPoint.srv  DeriveLaneSRoutes.srv  GetJunctionByIndex.srv  Junction.srv  LaneBoundaries.srv  Segment.srv  ToRoadPosition.srv
test/: CMakeLists.txt
test/maliput_ros/ros/: junction_service_test.cc  lane_service_test.cc  maliput_mock.h  maliput_plugin_config_test.cc  maliput_plugin_config_test.h  path_services_test.cc  segment_service_test.cc  test_maliput_plugin.yml
